force-app/main/default/objects/ffr__InquiryTemplateColumn__c/ffr__InquiryTemplateColumn__c.object-meta.xml
<CustomObject>
    <description>Stores details of a column that has been added to an action view template.</description>
    <label>Action View Template Column</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action View Template Columns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>