force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__ColumnWidth__c.field-meta.xml
<CustomField>
    <fullName>ffr__ColumnWidth__c</fullName>
    <label>Column Width</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>