force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__ConditionToValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__ConditionToValue__c</fullName>
    <label>Condition To Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>