force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__ConditionValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__ConditionValue__c</fullName>
    <label>Condition Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>