force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__DrillInquiryTemplate__c.field-meta.xml
<CustomField>
    <fullName>ffr__DrillInquiryTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Drill Action View Template</label>
    <referenceTo>ffr__InquiryTemplate__c</referenceTo>
    <relationshipLabel>Drill Action View Template Columns</relationshipLabel>
    <relationshipName>DrillInquiryTemplateColumns</relationshipName>
    <type>Lookup</type>
</CustomField>