force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__FormulaDp__c.field-meta.xml
<CustomField>
    <fullName>ffr__FormulaDp__c</fullName>
    <label>Formula Decimal Places</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>