force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__Mode__c.field-meta.xml
<CustomField>
    <fullName>ffr__Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NONE</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>SUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>