force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__NegativeFillColor__c.field-meta.xml
<CustomField>
    <fullName>ffr__NegativeFillColor__c</fullName>
    <label>Negative Fill Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>