force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__NegativeNumberFormat__c.field-meta.xml
<CustomField>
    <fullName>ffr__NegativeNumberFormat__c</fullName>
    <label>Negative Number Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Parenthesis</fullName>
            </value>
            <value>
                <fullName>Signed</fullName>
                <default>true</default>
                <label>Signed</label>
            </value>
            <value>
                <fullName>Unsigned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>