force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__NegativeTextColor__c.field-meta.xml
<CustomField>
    <fullName>ffr__NegativeTextColor__c</fullName>
    <label>Negative Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>