force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__PositiveFillColor__c.field-meta.xml
<CustomField>
    <fullName>ffr__PositiveFillColor__c</fullName>
    <label>Positive Fill Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>