force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__PositiveTextColor__c.field-meta.xml
<CustomField>
    <fullName>ffr__PositiveTextColor__c</fullName>
    <label>Positive Text Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>