force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__Scaling__c.field-meta.xml
<CustomField>
    <fullName>ffr__Scaling__c</fullName>
    <label>Scaling</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scale to Nearest Thousand</fullName>
            </value>
            <value>
                <fullName>Scale to Nearest Million</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>