force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__ShowSummary__c.field-meta.xml
<CustomField>
    <fullName>ffr__ShowSummary__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Total This Column</label>
    <type>Checkbox</type>
</CustomField>