force-app/main/default/objects/ffr__InquiryTemplateColumn__c/fields/ffr__ValueType__c.field-meta.xml
<CustomField>
    <fullName>ffr__ValueType__c</fullName>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NotNumber</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>